UPDATED style.css to correct responsiveness error on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,11 @@ h3 {
   .input-box { font-size: 20px; height: 20px; width: 60%;}
 }
 
+@media screen and (max-width: 380px) {
+  
+  .main-container { padding-top: 130px;}
+  
+}
 
 
 
